# fusion-mcp

./: README.md  pyproject.toml  ruff.toml
THIRD_PARTY_LICENSES/: AUTODESK.txt
mcp-addin/: config.py  mcp-addin.py  pyproject.toml  ruff.toml
mcp-addin/commands/: __init__.py
mcp-addin/commands/commandDialog/: entry.py
mcp-addin/commands/paletteSend/: entry.py
mcp-addin/commands/paletteShow/: entry.py
mcp-addin/commands/server/: entry.py  errors.py  server.py
mcp-addin/commands/server/handlers/: execute_code.py  health.py  parameters.py  screenshot.py
mcp-addin/lib/fusionAddInUtils/: event_utils.py
mcp-server/: pyproject.toml
mcp-server/src/: fusion_client.py  main.py
