[project]
name = "fusion-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.6",
 "pydantic>=2.11.7",
 "requests>=2.32.4",
]


[project.scripts]
fusion-mcp-server = "main:main"

[tool.setuptools]
py-modules = ["main"]
package-dir = { "" = "src" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
