[project]
name = "fusion-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.10.6",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
]


[project.scripts]
fusion-mcp-server = "main:main"

[tool.setuptools]
py-modules = ["main", "fusion_client"]
package-dir = { "" = "src" }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
